--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux-form": "^8.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
