--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/styles": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "firebase": "^7.14.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0",
@@ -39,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.9.10",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
     "node-sass": "^4.13.1",
     "react-redux": "^7.2.0",
@@ -48,5 +50,6 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
-  }
+  },
+  "proxy": "https://europe-west1-advreact-f31bd.cloudfunctions.net/api"
 }
