--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.10.1",
     "http2": "^3.3.7",
     "immutable": "^4.0.0-rc.12",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
